--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ nav ul li a:hover::after{
     transform:translateY(-10px);
 }
 /* -----------Portfolio---------- */
-.portfolio{
+.Portfolio{
     padding:50px,0;
 }
 .work-list{
