--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
     height:115vh;
     background-size: cover;
     background-position:center;
-    background-image:url(./../background-Image1.png);
+    background-image:url(./background-Image1.png);
     
 
 }
